# SensDot-B_Proto

./: .gitignore  BOM_SensDot-Proto_SensDot B_2025-06-13.csv  CMakeLists.txt  Kconfig  README.md  sdkconfig
main/: CMakeLists.txt  config.c  config.h  indicators.c  indicators.h  main.c  mqtt_client.c  mqtt_client.h  power_management.c  power_management.h  sensdot_common.h  sensors.c  sensors.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
